<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_teams"
        android:icon="@drawable/ic_users"
        android:title="@string/nav_teams"
        android:orderInCategory="2"
        app:showAsAction="ifRoom" />

    <!-- EMPTY PLACEHOLDER for FAB -->
    <item
        android:id="@+id/placeholder"
        android:title=""
        android:enabled="false"
        android:icon="@drawable/ic_transparent"
        android:orderInCategory="3"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_star_filled"
        android:title="@string/nav_favorites"
        android:orderInCategory="4"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/nav_profile"
        android:orderInCategory="5"
        app:showAsAction="ifRoom" />

</menu>
